@@ -1,3 +1,9 @@
+2005-06-29  Paolo Carlini  <pcarlini@suse.de>
+	    
+	PR libstdc++/21244 (cont^2)
+	* include/ext/bitmap_allocator.h: Convert everywhere
+	bits_per_block to size_t.	
+
 2005-06-29  Jonathan Wakely  <redi@gcc.gnu.org>
 
 	* include/bits/basic_string.h, include/bits/locale_facets.h: Fix
